--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
 PORT=5000
-MONGO_URI=mongodb://localhost:27017/pharmacy_db
+MONGO_URI=mongodb+srv://hassan:Hh123456@cluster0.yckrqr5.mongodb.net/pharmacy_system?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET=your_super_secret_key
